Move command generation, display, sanity check to machine.c.

--- a/test/makefile
+++ b/test/makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -std=c99 -g -Wall -O3 -Wno-unused-function
 
-SRC = ../genome.c ../linkedlist/linkedlist.c genome_test.c
+SRC = ../genome.c ../linkedlist/linkedlist.c ../machine/machine.c genome_test.c
 OBJ = $(SRC:.c=.o)
 TARGET = genome_test
 
